[package]
name = "power_gram"
version = "0.1.0"
authors = ["Kerry Gallagher <k.gallagher.05@gmail.com>"]

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_postgres_pool", "json"]

